--- a/PhoneBook/Views/PhoneBook/Index.cshtml
+++ b/PhoneBook/Views/PhoneBook/Index.cshtml
@@ -8,16 +8,18 @@
 {
     <div class="form-inline" style="padding-top:20px">
         <div class="form-group">
-            <label class="control-label col-sm-2" for="name">Name</label>
-            <div class="col-sm-8">
-                @Html.TextBox("EntryName", null, new { @class = "form-control", id = "txtName" })
-            </div>
-            <div class="col-sm-2">
-                <input type="submit" value="Search" class="btn btn-info" />
-            </div>
+            @Html.RadioButton("rboption", "EntryName", true) <text>Name</text> @Html.RadioButton("rboption", "PhoneNumber",false) <text> Phone Number </text>
+            @Html.TextBox("EntryName", null, new { @class = "form-control", id = "txtName", placeholder = "Enter name" })
+            @Html.TextBox("PhoneNumber", null, new { @class = "form-control", id = "txtPhNumber", placeholder = "Enter phone number" })
+
+            @*<label class="control-label col-sm-2" for="name">Name</label>
+                <div class="col-sm-8">
+                    @Html.TextBox("EntryName", null, new { @class = "form-control", id = "txtName" })
+                </div>*@
+            <input type="submit" value="Search" class="btn btn-info" />
         </div>
     </div>
-
+    <div class="well well-sm" style="margin-top:20px">Total <strong>@Model.Count()</strong> records found</div>
     <table class="table table-striped table-bordered" style="margin-top:20px">
         <tr>
             <th>
@@ -44,3 +46,19 @@
 
     </table>
 }
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("#txtPhNumber").hide();
+            $('input[type=radio][name=rboption]').change(function () {
+                if (this.value == 'EntryName') {
+                    $("#txtName").show();
+                    $("#txtPhNumber").hide();
+                }
+                else {
+                    $("#txtName").hide();
+                    $("#txtPhNumber").show();
+                }
+            });
+        });
+</script>
